# poetry-demo

./: .gitignore  pyproject.toml
poetry_demo/: print.py
test/: test_it.py
