[tool.poetry]
name = "poetry_demo"
version = "0.1.0"
description = ""
authors = ["G. Arampatzis <gtarabat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pretty-errors = "^1.2.25"
bpython = "^0.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
